git-svn-id: http://svn.silkstreamhosting.co.uk/svn/TOOLS/js-page-blend/trunk@9370 55df44b1-a43f-421f-89b5-6258b5dffb04

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Index</title>
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
@@ -10,6 +10,9 @@
     <a href="index.html">Internal Link (Index)</a>
     <a href="chicken.html">Internal Link (Chicken)</a>
     <a href="cow.html" data-pb-disable="true">Internal Link (Cow)</a>
+    <div data-pb-disable="false">
+        <a href="cow.html">Second Internal Link (Cow)</a>
+    </div>
     <a href="http://www.google.com">External Link (Google)</a>
 </div>
 <div class="page-blend-loader">
