--- a/cow.html
+++ b/cow.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Cow</title>
 </head>
 <body>
 <a href="index.html">Back</a>
